--- a/content/posts/2012-09-25-reliance.markdown
+++ b/content/posts/2012-09-25-reliance.markdown
@@ -1,6 +1,8 @@
 ---
 date: 2012-09-25
 title: Reliance
+author: "Wade Allen"
+type: "post"
 ---
 
 In our culture, we are often told that we can accomplish whatever we want. We simply need to give it enough energy, focus; if we simply work hard enough, it will be ours. This mindset has also made its way into the psyche of many churches. If we can simply direct our financial resources and staffing energy toward a program, it will flourish. Perhaps we should rethink this assumption. 
