--- a/content/posts/2012-06-05-travel.markdown
+++ b/content/posts/2012-06-05-travel.markdown
@@ -1,6 +1,8 @@
 ---
 date: 2012-06-05 20:44:19
 title: Travel
+author: "Wade Allen"
+type: "post"
 ---
 
 This past weekend, I was able to join my family on trip to Chicago. It was part-business, part-pleasure. While we had several church commitments, we also had an opportunity to engage in a few local tourist attractions. We were away for four nights. 
