--- a/content/posts/2012-07-18-less.markdown
+++ b/content/posts/2012-07-18-less.markdown
@@ -1,6 +1,8 @@
 ---
 date: 2012-07-18
 title: Less
+author: "Wade Allen"
+type: "post"
 ---
 
 Learning to trust God is no easy task. We explored the testing of Abraham last week in worship; God required intense trust as he ventured up the mountain to sacrifice Isaac. On one level, we question God's intentions in such a situation. Has God lost it? Has he turned evil? Is God contradicting Himself? God's instructions required momentous faith; Abraham responded in trust. 
