--- a/content/posts/2012-10-16-if.markdown
+++ b/content/posts/2012-10-16-if.markdown
@@ -1,6 +1,8 @@
 ---
 date: 2012-10-16
 title: If
+author: "Wade Allen"
+type: "post"
 ---
 
 A few weeks ago, I was reading James 4. James is addressing a fighting church. I know that it is difficult to imagine Christians fighting; those inside the church never bicker. I hope you can sense the sarcasm dripping from these words. Certainly, those inside the church quarrel. James asks the question, 
