--- a/content/posts/2012-12-11-anxiety.markdown
+++ b/content/posts/2012-12-11-anxiety.markdown
@@ -1,6 +1,8 @@
 ---
 date: 2012-12-11
 title: Anxiety
+author: "Wade Allen"
+type: "post"
 ---
 
 This week in worship, we are in Philippians 4:4-7. As I usually follow the lectionary during the season of Advent, this text was not one of my choosing. Yet, it is particularly applicable to our context. Yesterday alone, I directed two people to this text. It seems that our world is full of anxiety, stress and uncertainty. 
