--- a/content/posts/2013-01-15-2013-updates.markdown
+++ b/content/posts/2013-01-15-2013-updates.markdown
@@ -1,6 +1,8 @@
 ---
 date: 2013-01-15
 title: 2013 Updates
+author: "Wade Allen"
+type: "post"
 ---
 
 I have been privileged to be able to use the discernment process from my doctoral work variety of settings. We have used it in our local church setting for a number of important decisions (staffing, Sunday morning schedule change). As I look into 2013, I have scheduled meetings to utilize this process. 
