--- a/content/posts/2013-01-22-risk.markdown
+++ b/content/posts/2013-01-22-risk.markdown
@@ -1,6 +1,8 @@
 ---
 date: 2013-01-22
 title: Risk
+author: "Wade Allen"
+type: "post"
 ---
 
 As I prepared to write a post for this week, I decided that I would publish the article that I wrote for our monthly newsletter. Here is the February article for the monthly newsletter at First Baptist Church Muncie: 
