--- a/content/posts/2013-02-12-clarity.markdown
+++ b/content/posts/2013-02-12-clarity.markdown
@@ -1,6 +1,8 @@
 ---
 date: 2013-02-12
 title: Clarity
+author: "Wade Allen"
+type: "post"
 ---
 
 I have been thinking a lot about this discernment process in recent weeks. I have had the opportunity to use it in more than one context. As I reflect on the ways that we have used it at First Baptist Church Muncie, I am astounded by the placid environment  of complex and potentially disturbing decisions. How is this? How can an environment that was once toxic become serene? How can we continue to navigate changes in the church without exploding factions?
