--- a/content/posts/2014-09-16-control.markdown
+++ b/content/posts/2014-09-16-control.markdown
@@ -1,6 +1,8 @@
 ---
 title: Control
 date: 2014-09-16
+author: "Wade Allen"
+type: "post"
 ---
  
 As we continue to work through the life of David, I am finding stories of discernment. Last Sunday, we surveyed David's fleeing from Jerusalem following his son's (Absalom) rebellion. One aspect of the story was particularly interesting. 
