--- a/content/posts/2015-09-15-worship.markdown
+++ b/content/posts/2015-09-15-worship.markdown
@@ -1,6 +1,8 @@
 ---
 title: Worship 
 date: 2015-09-15
+author: "Wade Allen"
+type: "post"
 ---
  
 In my last post on this blog, I highlighted the difference between hearing the voice of God and obeying God. It is one thing to know the right action. It is quite another to take the necessary steps of obedience. As I relate the story of Solomon to issues surrounding a discerning church, the connections are striking. In this post, I would like to consider the implication of our worship. 
