--- a/content/posts/2013-06-17-in-and-out.markdown
+++ b/content/posts/2013-06-17-in-and-out.markdown
@@ -1,6 +1,8 @@
 ---
 date: 2013-06-17
 title: In and Out
+author: "Wade Allen"
+type: "post"
 ---
 
 The summer, we are working through a number of discernment processes in our church. In fact, if we can survive these changes, it greatly increases my confidence in this process. First, we are altering the church budget. In order to bring expenses in line with income, we will be making drastic  reductions in our budget. These reductions may include reduction of staff and increased volunteer involvement in significant areas. The decision has the potential to create significant conflict. Secondly, we are adjusting our music rehearsal schedule. We are reevaluating resources of staff and volunteers to create a sustainable schedule for various music groups. Again, this decision has the potential to create antagonism. Due to the complexity of these decisions, we have revised the discernment process.
