--- a/content/posts/2014-07-08-in-a-hurry.markdown
+++ b/content/posts/2014-07-08-in-a-hurry.markdown
@@ -1,6 +1,8 @@
 ---
 title: In a Hurry
 date: 2014-07-08
+author: "Wade Allen"
+type: "post"
 ---
  
 David was a pioneer. As he established Jerusalem as the newly formed capital of Israel, he has lots to do. One of the first items on his agenda was to bring the ark of the covenant into the city. This is not the boat that Noah built, but a four-foot wooden box that was covered in gold. It was an important piece, signifying the presence of God. David knew it was essential in ruling a God-centered people. David is all about getting the job done. He convenes the people, purchases a new cart and plans the transport. David is exuberant; dancing and celebration mark the journey. Everything is going great until the ox stumbles. 
