--- a/content/posts/2015-05-19-waking-up.markdown
+++ b/content/posts/2015-05-19-waking-up.markdown
@@ -1,6 +1,8 @@
 ---
 title: Waking Up
 date: 2015-05-19
+author: "Wade Allen"
+type: "post"
 ---
  
 I am presently working on a sermon series on the life of Solomon. We will begin in a few weeks and the series will take us through a good portion of the fall. Last year, we spent over twenty weeks in the life of David. The study as fascinating; I read stories that I never realized were in the Bible. I hope we will have the same experience in our Solomon study.
