--- a/content/posts/2015-07-29-buffers.markdown
+++ b/content/posts/2015-07-29-buffers.markdown
@@ -1,6 +1,8 @@
 ---
 title: Buffers
 date: 2015-07-29
+author: "Wade Allen"
+type: "post"
 ---
  
 I was listening to a podcast this morning by Todd Henry called [The Accidental Creative](http://www.accidentalcreative.com). He offers tips and interviews for those striving for creativity in their lives. In this week's [podcast](http://www.accidentalcreative.com/podcasts/ac/podcast-five-kinds-of-buffers-that-help-you-be-in-the-moment/), he talks about buffers. Henry defines buffers as whitespace between our commitments in life. He suggests thinning our meetings, our appointments and planning periods of time for reflection and quiet. I found his words especially relevant to church leaders and church teams who are discerning God's leading for their congregation. As I listened to his suggestions, I thought of how Jesus intentionally carved out time to be alone with the Father.
