--- a/content/posts/2016-07-19-his-ways.markdown
+++ b/content/posts/2016-07-19-his-ways.markdown
@@ -1,6 +1,8 @@
 ---
 title: His Ways
 date: 2016-07-19
+author: "Wade Allen"
+type: "post"
 ---
  
 This has been a season of traveling for me and my family. We have enjoyed time with extended family and a week of serving kids with disabilities at a camp. I have enjoyed a break from daily routines, but it is good to be writing again.
